--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -355,7 +355,7 @@
 
         function editInput(el, cond) {
             let input = el.parentElement;
-            console.log(input.getElementsByClassName("form-control");
+            console.log(input.getElementsByClassName("form-control"));
             }
 
             function addKey() {
