--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,4 +1,10 @@
-<h1>AAAAAAAAAA</h1>
+<h1>Взаимодействие с покупателем, это</h1>
+<p>Заказы на ваши товары</p>
+<p>Возможность менять статус</p>
+<p>возможность закрыть карточку</p>
+
+<p>Обращения по резюме</p>
+
 <script>
   function isCompany(){
     if (document.getElementById('isCompanyTrigger').checked){
