--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -79,21 +79,21 @@
                         <div class="row mt-2 ">
                             <div class="col-md-6 ">
                                 <label class="labels">Имя</label>
-                                <input type="text" name="first_name" class="form-control " id="first_name" placeholder="{{user.first_name}}"></div>
+                                <input type="text" name="first_name" class="form-control " id="first_name" placeholder="{{user.first_name}}" value="{{user.first_name}}"></div>
                             <div class="col-md-6 ">
                                 <label class="labels">Фамилия</label>
-                                <input type="text" name="last_name" class="form-control " id="last_name" placeholder="{{user.last_name}}"></div>
+                                <input type="text" name="last_name" class="form-control " id="last_name" placeholder="{{user.last_name}}" value="{{user.last_name}}"></div>
                         </div>
                         <div class="row mt-3 ">
                             <div class="col-md-12 ">
                                 <label class="labels">Номер телефона</label>
-                                <input type="text" name="phone" class="form-control" id="phone" placeholder="{{user.phone}}"></div>
+                                <input type="text" name="phone" class="form-control" id="phone" placeholder="{{user.phone}}" value="{{user.phone}}"></div>
                             <div class="col-md-12 ">
                                 <label class="labels">Город</label>
-                                <input type="text" name="city" class="form-control" id="city" placeholder="{{user.city}}"></div>
+                                <input type="text" name="city" class="form-control" id="city" placeholder="{{user.city}}" value="{{user.city}}"></div>
                             <div class="col-md-12 ">
                                 <label class="labels">Почта</label>
-                                <input type="text" class="form-control" id="email" placeholder="{{user.email}}" ></div>
+                                <input type="text" class="form-control" id="email" placeholder="{{user.email}}" value="{{user.email}}" ></div>
                         </div>
 
                         <div class="row mt-3">
