--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -45,7 +45,7 @@
         }
         
         input.invalid {
-            border: 1px solid #e03a0666
+            border: 1px solid #e03a0666;
         }
         
         .tab {
@@ -113,10 +113,6 @@
             text-align: center;
             margin-top: 30px;
             margin-bottom: 30px
-        }
-        
-        .thanks-message {
-            display: none
         }
     </style>
 </head>
@@ -196,52 +192,11 @@
 </body>
 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
 <script type='text/Javascript'>
-    let currentTab = 0;
-document.addEventListener("DOMContentLoaded", function(event) {
-    showTab(currentTab);
-});
-
-function showTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[n].style.display = "block";
-    if (n === 0) {
-        document.getElementById("prevBtn").style.display = "none";
-    } else {
-        document.getElementById("prevBtn").style.display = "inline";
-    }
-    if (n === (x.length - 1)) {
-        document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-    } else {
-        document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-    }
-    fixStepIndicator(n)
-}
-
-function nextPrev(n) {
-    let x = document.getElementsByClassName("tab");
-    x[currentTab].style.display = "none";
-    currentTab = currentTab + n;
-    if (currentTab === x.length) {
-       document.getElementById('nextBtn').type = "submit"
-    }
-    showTab(currentTab);
-}
-
-function surTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[currentTab].style.display = "none";
-    currentTab = n;
-    showTab(currentTab);
-}
-
-function fixStepIndicator(n) {
-    let i, x = document.getElementsByClassName("step");
-    for (i = 0; i <
-        x.length; i++) {
-        x[i].className = x[i].className.replace(" active", "");
-    }
-    x[n].className += " active";
-}
-     </script>
+    let currentTab = 0; document.addEventListener("DOMContentLoaded", function(event) { showTab(currentTab); }); function showTab(n) { let x = document.getElementsByClassName("tab"); x[n].style.display = "block"; if (n === 0) { document.getElementById("prevBtn").style.display
+    = "none"; } else { document.getElementById("prevBtn").style.display = "inline"; } if (n === (x.length - 1)) { document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>'; } else { document.getElementById("nextBtn").innerHTML
+    = '<i class="fa fa-angle-double-right"></i>'; } fixStepIndicator(n) } function nextPrev(n) { let x = document.getElementsByClassName("tab"); x[currentTab].style.display = "none"; currentTab = currentTab + n; if (currentTab === x.length) { document.getElementById('nextBtn').type
+    = "submit" } showTab(currentTab); } function surTab(n) { let x = document.getElementsByClassName("tab"); x[currentTab].style.display = "none"; currentTab = n; showTab(currentTab); } function fixStepIndicator(n) { let i, x = document.getElementsByClassName("step");
+    for (i = 0; i
+    < x.length; i++) { x[i].className=x [i].className.replace( " active", ""); } x[n].className +=" active" ; } </script>
 
 </html>
