add menu changes, urls done :)

--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -11,6 +11,9 @@
     <link href='' rel='stylesheet'>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <style>
         * {
             transition: 0.5s;
@@ -89,12 +92,12 @@
       <ul class="list-unstyled components">
       
          
-        <li>
+        <li class="Btn">
           <a href="#">Главная</a>
         </li>
         
        
-        <li class="active">
+        <li class="active Btn">
           <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой профиль</a>
           <ul class="collapse list-unstyled" id="homeSubmenu">
             <li>
@@ -110,11 +113,11 @@
         </li>
      
         
-        <li>
+        <li class="Btn">
           <a href="#">Мои товары</a>
         </li>
         
-        <li>
+        <li class="Btn">
           <a href="#">Резюме</a>
         </li>
         
@@ -123,7 +126,7 @@
       <ul class="list-unstyled CTAs">
        
         <li>
-          <a href="/" class="article">Обратно на главую</a>
+          <a href="/" class="article ">Обратно на главую</a>
         </li>
       </ul>
     </nav>
@@ -139,12 +142,7 @@
     </div>
   </div>
 
-  <!-- jQuery CDN - Slim version (=without AJAX) -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <!-- Popper.JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
 
   <script type="text/javascript">
     $(document).ready(function() {
@@ -155,23 +153,20 @@
   </script>       
        
         
-        
-       
 
-        
-    
     
     
     <script>
         $(function() {
             var xhr = new XMLHttpRequest()
-            xhr.open('GET', 'becomeCreatorTemplates/2/')
+            xhr.open('GET', 'becomeCreatorTemplates/1/')
             xhr.onload = function() {
 
                 $('#MainWindowContainer').html(xhr.response)
             }
             xhr.send()
         });
+        
         $('.Btn').on('click', {}, function(inBody) {
             var xhr = new XMLHttpRequest()
             var index = $(this).index() + 1
