start changing template1.html

--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,16 +1,289 @@
-<h1>Взаимодействие с покупателем, это</h1>
-<p>Заказы на ваши товары</p>
-<p>Возможность менять статус</p>
-<p>возможность закрыть карточку</p>
+<h1>Заказы в работе</h1>
 
-<p>Обращения по резюме</p>
+<div class="align-text-top">
+
+    <div class="col-sm-9 scrollspy-example">
+        <div class="container">
+            <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
+                <thead>
+                    <tr>
+                        <th class="col-xs-3">ID</th>
+                        <th class="col-xs-3">Название задачи</th>
+                        <th class="col-xs-3">Кол-во шт товара</th>
+                        <th class="col-xs-3">Заказчик</th>
+                        <th class="col-xs-3">Дедлайн</th>
+                        <th class="col-xs-6">Статус</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                    <tr>
+                        <td class="col-xs-3">123441</td>
+                        <td class="col-xs-3">Сделеать стул</td>
+                        <td class="col-xs-6">2</td>
+                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">2021-05-23</td>
+                        <td class="col-xs-6">В работе</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
+
+
+        <div class="col-sm-4 scrollspy-example" style="margin-top: 20px">
+            <div class="container">
+                <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
+                    <thead>
+                        <tr>
+                            <th class="col-xs-3">ID Запроса</th>
+                            <th class="col-xs-3">ID Товара</th>
+                            <th class="col-xs-3">Кол-во шт</th>
+                            <th class="col-xs-3">Заказчик</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-xs-3">123441</td>
+                            <td class="col-xs-3">Сделеать стул</td>
+                            <td class="col-xs-6">2</td>
+                            <td class="col-xs-3">@idЗаказчика</td>
+
+                        </tr>
+                        <tr>
+                            <td class="col-xs-3">123441</td>
+                            <td class="col-xs-3">Сделеать стул</td>
+                            <td class="col-xs-6">2</td>
+                            <td class="col-xs-3">@idЗаказчика</td>
+
+                        </tr>
+                        <tr>
+                            <td class="col-xs-3">123441</td>
+                            <td class="col-xs-3">Сделеать стул</td>
+                            <td class="col-xs-6">2</td>
+                            <td class="col-xs-3">@idЗаказчика</td>
+
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+
+        <div class="col-sm-5 scrollspy-example" style="margin-top: 20px">
+            <div class="container">
+                <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
+                    <thead>
+                        <tr>
+                            <th class="col-xs-3">ID Запроса</th>
+                            <th class="col-xs-3">ID Товара</th>
+                            <th class="col-xs-3">Кол-во шт</th>
+                            <th class="col-xs-3">Заказчик</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-xs-3">123441</td>
+                            <td class="col-xs-3">Сделеать стул</td>
+                            <td class="col-xs-6">2</td>
+                            <td class="col-xs-3">@idЗаказчика</td>
+
+                        </tr>
+                        <tr>
+                            <td class="col-xs-3">123441</td>
+                            <td class="col-xs-3">Сделеать стул</td>
+                            <td class="col-xs-6">2</td>
+                            <td class="col-xs-3">@idЗаказчика</td>
+
+                        </tr>
+                        <tr>
+                            <td class="col-xs-3">123441</td>
+                            <td class="col-xs-3">Сделеать стул</td>
+                            <td class="col-xs-6">2</td>
+                            <td class="col-xs-3">@idЗаказчика</td>
+
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
 
 <script>
-  function isCompany(){
-    if (document.getElementById('isCompanyTrigger').checked){
-      document.getElementById('companyTriggerOn').style.display = "flex";
-    } else{
-      document.getElementById('companyTriggerOn').style.display = "none";
+    function isCompany() {
+        if (document.getElementById('isCompanyTrigger').checked) {
+            document.getElementById('companyTriggerOn').style.display = "flex";
+        } else {
+            document.getElementById('companyTriggerOn').style.display = "none";
+        }
     }
-  }
+
 </script>
+
+<style>
+    .scrollspy-example {
+        position: relative;
+        height: 350px;
+        overflow: auto;
+    }
+
+    .table-fixed {
+        width: 100%;
+        background-color: #f3f3f3;
+
+    }
+
+</style>
