fix pictures in creator profile and cardProduct

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -12,6 +12,6 @@
             {{ product.cost }} ₽
         </div>
     </figcaption>
-    <a href='cardProduct/'></a>
+    <a href='cardProduct/{{ product.id }}'></a>
 </figure>
 {% endfor %}
