--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -10,7 +10,7 @@
 
                 <div class="product-card-details row">
                     <div class="col-md-5 p-1">
-                        <img class="product-card-details-img" src='https://images.unsplash.com/photo-1525966222134-fcfa99b8ae77?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=643&q=80' />
+                        <img class="product-card-details-img" src={{ product.picture.url }} />
                     </div>
                     <div class="col-md-7 p-1">
 
