--- a/bizopt/BO/templates/cardTask.html
+++ b/bizopt/BO/templates/cardTask.html
@@ -7,7 +7,7 @@
    
    
     
-        <header>{{ cardTask.name }}</header>
+        <header>{{ task.name }}</header>
         <input type="radio" name="slider" checked id="home">
         <input type="radio" name="slider" id="blog">
         <input type="radio" name="slider" id="code">
@@ -24,7 +24,7 @@
         <section>
           <div class="content content-1">
             <div class="title">Описание</div>
-            <p>{{ card.description }}</p>
+            <p>{{ task.description }}</p>
           </div>
           <div class="content content-2">
             <div class="title">This is a Blog content</div>
