--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -3,17 +3,19 @@
 
 
 
-   <h1>Выши заказы</h1>
+   <h1>Ваши заказы</h1>
 
 
 <div class="placeOut">
-   
-   
-   
-   
-   
-   
+
+
+
+
+
+
     <!-- DJANGO for start here -->
+
+    {% for task in tasks %}
 
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
@@ -24,7 +26,7 @@
                     
                       <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">
                       
-                      <h1 style="margin-left: 5%">Name task</h1>
+                      <h1 style="margin-left: 5%">{{ task.name }}</h1>
                     
                   </div>
               
@@ -38,18 +40,18 @@
               <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>
               
             </div>
-            
-            
-            
-            
+
+
+
+
             <dl class="row" style="margin-top: 2%">
               <dt class="col-sm-3">Описание</dt>
-              <dd class="col-sm-9">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, sapiente expedita iusto quidem ipsa placeat commodi adipisci ab omnis voluptatibus ducimus vero delectus repellat quasi, cumque ea! Voluptatibus, recusandae, deserunt! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus facere itaque rem et nobis amet fugit deleniti modi consequatur sapiente, nam eligendi iste saepe pariatur labore quos quasi praesentium earum.</dd>
+              <dd class="col-sm-9">{{ task.description }}</dd>
 
               <dt class="col-sm-3">Цена</dt>
               <dd class="col-sm-9">
                 <div class="price">
-                    1000 ₽
+                    {{ task.price }} ₽
                 </div>
                 
                 <span class="badge rounded-pill bg-success">Оплачено</span>
@@ -60,18 +62,18 @@
               <dt class="col-sm-3">Контакты продавца</dt>
               <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>
 
-              
-              
-            </dl>
-            
 
-         
-         
+
+            </dl>
+
+
+
+
           </div>
         </div>
       </div>
     </div>
-
+    {% endfor %}
     <!-- DJANGO for end here -->
 
 </div>
